# dabo.guru

./: .gitignore  README.md  build.py  config.default.json  content.wsgi  gitmd.sh  main.py  pushbullet.py  pycopy.py  python_web.wsgi  requirements.txt  restart.sh  server.sh
azdweb/: __init__.py  error_handlers.py  game.py  github_pull.py  main.py  markdown_serv.py  minecraft_uuids.py  minifier.py
azdweb/util/: __init__.py  gh_markdown.py
content/: __init__.py  documentation_serve.py  documentation_update.py  error_handlers.py  game.py  github_pull.py  main.py  markdown_serv.py  minecraft_api.py  minecraft_uuids.py  minifier.py  mirror.py  static_serve.py  statistics_api.py  web_api_pages.py
content/static/: robots.txt
content/templates/: 2548.html  403.html  404.html  bootstrap-layout.html  display-data.html  display-statistics.html  (+10 more)
markdown/: index.md  test.md
resources_lib/: configuration_resources.py  documentation.py  statistics_key_names.py
static/: 2548.js
static-templates/: 200.html  2548.html  403.html  404.html  500.html  contact.html  frc.html  index.html  irc.html  projects.html  resources.html
tasks/: record_statistics.py
templates/: 200.html  2548.html  403.html  404.html  500.html  bootstrap-layout.html  display-data.html  generic-success.html  invalid-api-key-403.html  layout.html  markdown-404.html  markdown.html  oauth-error.html  oauth-response.html  oauth-template.html
uwsgi_mules/: documentation_update.py  record_statistics.py
v2/: Cargo.toml  README.md
v2/src/: database.rs  main.rs  redis.rs  setup.rs  statistics.rs
(+18 files in other folders)
